[gd_scene load_steps=4 format=3 uid="uid://cdt441cqsrc7a"]

[ext_resource type="Script" path="res://Home Screen/MainMenu.gd" id="1_jo4rk"]
[ext_resource type="FontFile" uid="uid://cv5f32m7wk82g" path="res://Assets/Fonts/bitwise.ttf" id="2_uwmcg"]
[ext_resource type="Script" path="res://Home Screen/Options.gd" id="3_71vsw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jo4rk")

[node name="MainMenu" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 645.0

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
layout_mode = 0
offset_left = -35.0
offset_top = -11.0
offset_right = 1168.0
offset_bottom = 667.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Panel" parent="MainMenu"]
layout_mode = 0
offset_left = 36.0
offset_top = 24.0
offset_right = 1110.0
offset_bottom = 162.0

[node name="Label" type="Label" parent="MainMenu/Title"]
layout_mode = 0
offset_right = 1073.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_uwmcg")
theme_override_font_sizes/font_size = 100
text = "Monster Management"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="MainMenu"]
visible = false
layout_mode = 0
offset_left = 51.0
offset_top = 181.0
offset_right = 477.0
offset_bottom = 265.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Continue"

[node name="New Game" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 51.0
offset_top = 282.0
offset_right = 477.0
offset_bottom = 366.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 31
text = "New Game"

[node name="Options" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 49.0
offset_top = 378.0
offset_right = 475.0
offset_bottom = 461.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Options (no works)"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 49.0
offset_top = 475.0
offset_right = 359.0
offset_bottom = 558.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Quit"

[node name="OptionsMenu" type="Panel" parent="."]
visible = false
offset_left = 491.0
offset_top = 172.0
offset_right = 1107.0
offset_bottom = 636.0
script = ExtResource("3_71vsw")

[node name="LabelGlobal" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 260.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 25
text = "Global Volume:"

[node name="HSlider" type="HSlider" parent="OptionsMenu/LabelGlobal"]
layout_mode = 0
offset_left = -4.0
offset_top = 10.0
offset_right = 539.0
offset_bottom = 98.0

[node name="LabelDialouge" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 9.0
offset_top = 114.0
offset_right = 339.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 25
text = "Dialouge Volume:"

[node name="HSlider" type="HSlider" parent="OptionsMenu/LabelDialouge"]
layout_mode = 0
offset_left = -4.0
offset_top = 10.0
offset_right = 543.0
offset_bottom = 98.0

[node name="LabelActions" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 218.0
offset_right = 338.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 25
text = "Actions Volume:"

[node name="HSlider" type="HSlider" parent="OptionsMenu/LabelActions"]
layout_mode = 0
offset_left = -7.0
offset_top = 15.0
offset_right = 541.0
offset_bottom = 103.0

[node name="LabelAmbients" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 2.0
offset_top = 326.0
offset_right = 332.0
offset_bottom = 383.0
theme_override_font_sizes/font_size = 25
text = "Ambiance Volume:"

[node name="HSlider" type="HSlider" parent="OptionsMenu/LabelAmbients"]
layout_mode = 0
offset_left = -4.0
offset_top = 10.0
offset_right = 553.0
offset_bottom = 98.0

[node name="PurgeSave" type="Button" parent="."]
visible = false
offset_left = 956.0
offset_top = 562.0
offset_right = 1127.0
offset_bottom = 626.0
text = "Purge SaveGame"

[node name="Debug" type="Panel" parent="."]
visible = false
offset_left = 621.0
offset_top = 179.0
offset_right = 856.0
offset_bottom = 615.0

[node name="Label" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 228.0
offset_bottom = 58.0
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 56.0
offset_top = 55.0
offset_right = 185.0
offset_bottom = 114.0
text = "1"

[node name="Button2" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 56.0
offset_top = 137.0
offset_right = 185.0
offset_bottom = 196.0
text = "2"

[node name="Button3" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 58.0
offset_top = 215.0
offset_right = 187.0
offset_bottom = 274.0
text = "3"

[node name="Button4" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 59.0
offset_top = 290.0
offset_right = 188.0
offset_bottom = 349.0
text = "4"

[node name="Button5" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 60.0
offset_top = 360.0
offset_right = 189.0
offset_bottom = 419.0
text = "5"

[connection signal="pressed" from="MainMenu/Continue" to="." method="ContinueGame"]
[connection signal="pressed" from="MainMenu/New Game" to="." method="StartNewGame"]
[connection signal="pressed" from="MainMenu/Options" to="." method="OptionsMenu"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="QuitGame"]
[connection signal="pressed" from="PurgeSave" to="." method="ClearDir"]
[connection signal="pressed" from="Debug/Button" to="." method="Debug1"]
[connection signal="pressed" from="Debug/Button2" to="." method="Debug2"]
[connection signal="pressed" from="Debug/Button3" to="." method="Debug3"]
[connection signal="pressed" from="Debug/Button4" to="." method="Debug4"]
[connection signal="pressed" from="Debug/Button5" to="." method="Debug5"]
